Right panel UI fixes (#6994)
## Summary
Some UI updates on the Right panel on the player:
- Don't cutoff text when showing events
- Remove the padding from the newly added scroll bar
- Stop error context from overlaying on the "See error" button

## How did you test this change?
Click test

https://www.loom.com/share/13d27c4b59d041fe8fdff649f3a8a1db?sid=fbd10f6d-ac22-4b91-ba56-e9a51377f231

## Are there any deployment considerations?
N/A

## Does this work require review from our design team?
N/A

--- a/frontend/src/__generated/index.css
+++ b/frontend/src/__generated/index.css
@@ -6639,18 +6639,6 @@ body {
   background-color: var(--_1pyqka91y);
   box-shadow: inset 0px -1px 0px rgba(0, 0, 0, 0.1);
 }
-._1eia00s0 {
-  display: flex;
-  flex-direction: column;
-  height: 100%;
-  width: 100%;
-}
-._1eia00s1 {
-  overflow: hidden;
-  text-overflow: ellipsis;
-  white-space: nowrap;
-  line-height: 20px;
-}
 ._9ttgrc0 {
   height: 100%;
   width: 100%;
@@ -6690,21 +6678,17 @@ body {
 }
 .ltrwrc0 {
   height: calc(100vh - 108px);
-  overflow-y: scroll;
 }
 .ltrwrc1 {
-  height: calc(100vh - 108px - var(--banner-height));
-}
-.ltrwrc2 {
   position: fixed;
   left: 100%;
   transform: translateX(300px);
 }
-.ltrwrc3 {
+.ltrwrc2 {
   height: 100%;
   padding: 0;
 }
-.ltrwrc4 {
+.ltrwrc3 {
   border-radius: 8px;
 }
 ._1l6nlco0 {
